<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>IdealGraphVisualizer-parent</name>
    <groupId>org.graalvm.visualizer</groupId>
    <artifactId>IdealGraphVisualizer-parent</artifactId>
    <version>1.20-SNAPSHOT</version>
    <packaging>pom</packaging>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.netbeans.utilities</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>${nbmmvnplugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <brandingToken>${brandingToken}</brandingToken>
                        <cluster>${brandingToken}</cluster>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${mvncompilerplugin.version}</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${mvnjarplugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12.2</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.awt.headless>true</java.awt.headless>
                        </systemPropertyVariables>
                        <argLine>--add-opens=java.base/java.net=ALL-UNNAMED
                            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${mvnenforcerplugin.version}</version>
                    <executions>
                        <execution>
                            <id>enforce-java</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>[17,22)</version>
                                        <message>The IGV Netbeans platform requires a JDK version between 17 and 22</message>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>branding</module>
        <module>application</module>
        <module>Settings</module>
        <module>Data</module>
        <module>VisualizerUI</module>
        <module>Difference</module>
        <module>PolyglotRunner</module>
        <module>SettingsUI</module>
        <module>Util</module>
        <module>HierarchicalLayout</module>
        <module>Layout</module>
        <module>Bytecodes</module>
        <module>ControlFlow</module>
        <module>Coordinator</module>
        <module>Filter</module>
        <module>FilterProfiles</module>
        <module>FilterWindow</module>
        <module>Graal</module>
        <module>Graph</module>
        <module>GraphSearch</module>
        <module>JSONExporter</module>
        <module>JavaSources</module>
        <module>NetworkConnection</module>
        <module>SelectionCoordinator</module>
        <module>Shell</module>
        <module>SourceRepository</module>
        <module>Upgrade</module>
        <module>View</module>
        <module>ViewerApi</module>
    </modules>
    <properties>
        <netbeans.version>RELEASE220</netbeans.version>
        <brandingToken>idealgraphvisualizer</brandingToken>
        <swinglayouts.version>1.0.2</swinglayouts.version>
        <nbmmvnplugin.version>4.8</nbmmvnplugin.version>
        <mvncompilerplugin.version>3.10.1</mvncompilerplugin.version>
        <mvnjarplugin.version>3.2.2</mvnjarplugin.version>
        <mvnenforcerplugin.version>3.1.0</mvnenforcerplugin.version>
        <junit.version>4.13.2</junit.version>
        <batik.version>1.14</batik.version>
        <openpdf.version>1.3.29</openpdf.version>
        <wala.version>1.5.8</wala.version>
    </properties>
</project>
